# clixxlib

./: .cproject  .gitignore  .project  README.md  autogen.sh  configure.ac  sample1.py
clixx/: __init__.py  clixxbase.py  rasberry.py  raspberry.py  smartdock.py
cpp/: README.md
cpp/include/: README.md  clixx.h
cpp/include/clixx/: base.h
cpp/src/: Makefile.am  README.md  dock.cpp
cpp/src/boards/arduino/: README.md
cpp/src/boards/lpc1114/: README.md
cpp/src/boards/raspi/: README.md
include/: clixx.h  dock.h  docks.h
include/boards/: board.h
include/clixx/: base.h  boards.h
include/clixx/boards/: README.md
include/clixx/modules/: README.md
python/: README  sample1.py  setup.py
python/clixx/: __init__.py  raspberry.py  smartdock.py
src/: docks.cpp
src/boards/clixxdock/: README.md
src/boards/launchpad/: README.md
src/modules/: README.md
